# camctl

./: .gitignore  CLAUDE.md  Makefile  processes.json  pyproject.toml
src/camctl/: __init__.py  __main__.py
src/camctl/api/camunda/: __init__.py  client.py  engine.py  errors.py  service.py
src/camctl/api/camunda/common/: __init__.py  models.py  pagination.py  resource.py  variables.py
src/camctl/api/camunda/models/: __init__.py  variables.py
src/camctl/api/camunda/processes/: __init__.py  api.py
src/camctl/api/camunda/processes/models/: payloads.py  process.py
src/camctl/api/camunda/resources/: __init__.py
src/camctl/api/camunda/resources/processes/: api.py  endpoints.py
src/camctl/api/camunda/tasks/: __init__.py  api.py
src/camctl/api/http/: __init__.py  base.py  circuit_breaker.py  models.py  params.py  serialize.py  service.py
src/camctl/config/: __init__.py  settings.py
src/camctl/console/: __init__.py  app.py  context.py  display.py  inputs.py  logging.py
src/camctl/console/commands/: __init__.py
src/camctl/console/commands/processes/: __init__.py  cancel.py  count.py  filters.py  get.py  list.py  variables.py
src/camctl/console/commands/tasks/: __init__.py  complete.py  count.py  filters.py  get.py  list.py
src/camctl/utils/: __init__.py  concurrency.py  ids.py  serialization.py
tests/integration/: conftest.py
tests/integration/api/camunda/: test_client.py
tests/integration/api/camunda/resources/: test_processes_api.py  test_tasks_api.py
tests/unit/api/camunda/: test_errors.py
tests/unit/api/camunda/common/: test_pagination.py  test_resource.py  test_variables.py
tests/unit/api/camunda/resources/: test_process_models.py  test_task_models.py
tests/unit/api/http/: test_circuit_breaker.py  test_serialize.py  test_service.py
tests/unit/config/: test_settings.py
tests/unit/console/: test_inputs.py
tests/unit/utils/: test_concurrency.py  test_ids.py  test_serialization.py
(+26 files in other folders)
